# startCppG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  hello.cpp
test/: hello_test.cpp
